tests/cases/should_fail/types/incomplete_tuple_type.hash
// run=fail, stage=parse

k : (str: , bar: u8) -> u32 = ("str", 1); // Error here, should expect a type
