tests/cases/should_fail/types/incomplete_tuple_type.stderr
error: expected a type annotation, however received a `,`
 --> $DIR/incomplete_tuple_type.hash:1:11
1 |   k : (str: , bar: u8) -> u32 = ("str", 1); // Error here, should expect a type
  |             ^ here
